# -_LifePulse

./: .env.example  .gitguardian.yaml  .gitignore  README.md  README_SERVER.md  SECURITY.md  VERCEL_DEPLOYMENT.md  capacitor.config.json  index.html  package.json  script.js  section_starts.txt  sections.txt  service-worker.js  styles.css  tags_map.txt  test_models.js  test_results.txt  vercel.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/lifepulse/app/: GemmaLocalAi.java  MainActivity.java  ModelDownloader.java  NetworkUtils.java  OfflineAiPlugin.java
api/: chat.js  nearby-hospitals.js  pregnancy-chat.js  save-profile.js
public/: auth.html  auth.js  firebase-auth.js  firebase-config.js  index.html  manifest.json  pregnancy.js  script.js  styles.css
server/: index.js  list_models.js
server/config/: gemini.js
server/controllers/: chatController.js
server/routes/: chat.js
